--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -1,5 +1,5 @@
 html, body {
-    margin: 5px;
+    margin: 0.3em;
     height: 100%;
     justify-content: center;
     font-family: 'Roboto', 'PT Sans', 'Montserrat', Helvetica, Arial, sans-serif;
@@ -23,14 +23,13 @@ html, body {
 }
 
 .wrapper {
-    width: 900px;
+    width: 90%;
     margin: auto;
 }
 
 /* HEADER, NAV MENU AND FOOTER */
 header, footer {
     width: 100%;
-    margin: 0px;
     background-color: black;
     color: white;
     font-weight: bold;
@@ -47,7 +46,6 @@ header, footer {
 	flex-flow: row nowrap;
 	justify-content: center;
 	align-items: center;
-	margin: 0px;
 }
 
 .logo {
@@ -72,8 +70,8 @@ header h1 {
 
 /* navigation elements */
 header nav {
-    margin: 0px;
-    line-height: 50px;
+    /* margin: 0px; */
+    line-height: 2.5em;
 	background-color: red; 
 }
 
@@ -98,7 +96,7 @@ header nav a {
     font-size: 1.25em;
     text-transform: capitalize;
 	text-align: center;
-    padding:10px;
+    padding: 0.5em;
 }
 
 header nav a.this-page {
@@ -117,7 +115,6 @@ header nav a:active {
 
 footer {
     min-height: 100px;
-    margin-top: 20px;
     background-color: red;
 }
 
@@ -125,12 +122,11 @@ footer {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
-	margin: 0px;
 }
 
 .footer_fb { order: 1; flex: 1 0; }
 .footer_siteInfo { order: 2; flex: 6 0 10%; }
-.footer_siteInfo * {line-height: 20px;}
+.footer_siteInfo * {line-height: 0.3em;}
 .footer_twitter { order: 3; flex: 1 0; }
 
 /*
@@ -176,7 +172,7 @@ footer p .linkedIn {
 
 /* CONTENT */
 section header {
-    line-height: 40px;
+    line-height: 2em;
     width: 99%;
     padding-left: 1%;
     text-align: left;
@@ -185,6 +181,7 @@ section header {
 
 section:first-of-type header {
     padding-left: 0%;
+	padding-right: 1%;
     background-color: white;
     color: black;
 }
@@ -245,10 +242,12 @@ h2 {
 /* mobile with 4 row navigation */ 
 @media screen and (max-width: 530px) {
 	.header_wrapper { flex-direction: column; }
-    .logo { flex: 0 1 100px; padding-bottom: 0px; }
+    .logo { flex: 0 1 70px; padding-bottom: 0px; }
+	.logo img { max-width: 70px; max-height: 70px; }
+    .batala { font-size: 36px; }
+	header nav { line-height: 2em; }
     header nav ul { flex-direction: column; }
     /* header nav ul li { flex: 0 0 100%; } */
-    header nav { line-height: 2.25em; }
     header nav a { padding: 5px; }
     /* footer p span span { display: block; line-height: 50px; } */
     footer p .validator { padding-right: 5px;}
