--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -117,6 +117,8 @@ nav a:active {
 footer {
     min-height: 100px;
     background-color: red;
+	font-size: 0.8em;
+    line-height: 0.75em;
 }
 
 .footerWrapper {
@@ -127,8 +129,10 @@ footer {
 
 .footer_fb { order: 1; flex: 1 0; }
 .footer_siteInfo { order: 2; flex: 6 0 10%; }
-.footer_siteInfo * {line-height: 0.3em;}
+.bandInfo span a { text-decoration: none; color: white; }
+.siteInfo { color: black; }
 .footer_twitter { order: 3; flex: 1 0; }
+img.validator { border:0; width:68px; height:20px; }
 
 /* END HEADER, NAV MENU AND FOOTER */
 
