--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -125,13 +125,24 @@ footer {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
+	align-items: center;
 }
-
 .footer_fb { order: 1; flex: 1 0; }
 .footer_siteInfo { order: 2; flex: 6 0 10%; }
+.footer_twitter { order: 3; flex: 1 0; }
+
+.footer_siteInfo { 
+    display: flex; 
+    flex-flow: 
+    column nowrap; 
+}
+.bandInfo { order: 1; flex: 1 0; background-color: green }
+.siteInfo { order: 2; flex: 1 0;  background-color: orange }
+.siteValidation { order: 3; flex: 1 0;  background-color: purple }
+
+
 .bandInfo span a { text-decoration: none; color: white; }
 .siteInfo { color: black; }
-.footer_twitter { order: 3; flex: 1 0; }
 img.validator { border:0; width:68px; height:20px; }
 
 /* END HEADER, NAV MENU AND FOOTER */
