--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -129,8 +129,8 @@ footer p { margin: 0px; }
 .siteInfo { order: 2; flex: 1 0;  background-color: orange; }
 .siteValidation { order: 3; flex: 1 0;  background-color: purple; }
 
-.footer_siteInfo p span {flex: 0 1 50%;  text-align: left; }
-.footer_siteInfo p span:first-of-type { text-align: right; }
+.footer_siteInfo p span {flex: 0 1 50%;  text-align: left; padding-left: 0.5em }
+.footer_siteInfo p span:first-of-type { text-align: right; padding-right: 0.5em }
 
 .bandInfo span a { text-decoration: none; color: white; }
 .siteInfo { color: black; }
