--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -125,9 +125,9 @@ footer p { margin: 0px; }
 .footer_siteInfo { order: 2; flex: 6 0 10%; row-gap: 0.5em; }
 .footer_twitter { order: 3; flex: 1 0; }
 
-.bandInfo { order: 1; flex: 1 0; background-color: green; }
-.siteInfo { order: 2; flex: 1 0;  background-color: orange; }
-.siteValidation { order: 3; flex: 1 0;  background-color: purple; }
+.bandInfo { order: 1; flex: 1 0; }
+.siteInfo { order: 2; flex: 1 0; }
+.siteValidation { order: 3; flex: 1 0; }
 
 .footer_siteInfo p span {flex: 0 1 50%;  text-align: left; padding-left: 0.5em }
 .footer_siteInfo p span:first-of-type { text-align: right; padding-right: 0.5em }
