--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -132,6 +132,7 @@ footer p { margin: 0px; }
 .footer_siteInfo p span {flex: 0 1 50%;  text-align: left; padding-left: 0.5em }
 .footer_siteInfo p span:first-of-type { text-align: right; padding-right: 0.5em }
 
+.footer_fb img, .footer_twitter img { width: 40px; height: 40px }
 .bandInfo span a { text-decoration: none; color: white; }
 .siteInfo { color: black; }
 img.validator { border:0; width:68px; height:20px; }
